Fix landing page item spacing on small screens

--- a/app/assets/stylesheets/home-index.scss
+++ b/app/assets/stylesheets/home-index.scss
@@ -16,6 +16,7 @@
 @media (min-width: 768px) {
   .landing-banner-item {
     height: 260px;
+    margin: 10px auto;
 
     .tile {
       height: 100%;
